--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,18 @@ dependencies:
   firebase_database: ^10.2.4
   flutter:
     sdk: flutter
-  go_router: ^10.0.0
+  go_router: ^13.0.1
   google_sign_in: ^6.1.4
   provider: ^6.0.5
   shared_preferences: ^2.0.13
   flutter_riverpod: ^2.3.6
+  get: ^4.1.4
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   integration_test:
     sdk: flutter
   flutter_driver:
